--- a/Pages/Index.cshtml
+++ b/Pages/Index.cshtml
@@ -1,7 +1,7 @@
-﻿@page
-@model IndexModel
+﻿@page "/"
+@model Cardos_Dan_Lab8.Pages.Books.IndexModel
 @{
-    ViewData["Title"] = "Home page";
+    ViewData["Title"] = "Index";
 }
 
 <div class="text-center">
